--- a/.github/workflows/build-notebooks.yaml
+++ b/.github/workflows/build-notebooks.yaml
@@ -17,6 +17,9 @@ jobs:
       level4: ${{ steps.gen.outputs.level4 }}
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
       - run: python3.12 gen_gha_matrix_jobs.py
         id: gen
 
