--- a/.github/workflows/build-notebooks.yaml
+++ b/.github/workflows/build-notebooks.yaml
@@ -28,6 +28,7 @@ jobs:
     needs: [ "gen" ]
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix: "${{ fromJson(needs.gen.outputs.level0) }}"
     steps:
       - uses: actions/checkout@v4
@@ -38,6 +39,7 @@ jobs:
     needs: [ "gen", "level0" ]
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix: "${{ fromJson(needs.gen.outputs.level1) }}"
     steps:
       - uses: actions/checkout@v4
@@ -47,6 +49,7 @@ jobs:
     needs: [ "gen", "level1" ]
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix: "${{ fromJson(needs.gen.outputs.level2) }}"
     steps:
       - uses: actions/checkout@v4
@@ -56,6 +59,7 @@ jobs:
     needs: [ "gen", "level2" ]
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix: "${{ fromJson(needs.gen.outputs.level3) }}"
     steps:
       - uses: actions/checkout@v4
@@ -65,6 +69,7 @@ jobs:
     needs: [ "gen", "level3" ]
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix: "${{ fromJson(needs.gen.outputs.level4) }}"
     steps:
       - uses: actions/checkout@v4
