--- a/.github/workflows/build-notebooks.yaml
+++ b/.github/workflows/build-notebooks.yaml
@@ -123,6 +123,27 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Free up additional disk space
+        # https://docs.github.com/en/actions/learn-github-actions/expressions
+        if: "${{ contains(matrix.target, 'cuda') || contains(matrix.target, 'pytorch') || contains(matrix.target, 'tensorflow') }}"
+        run: |
+          df -h
+
+          sudo rm -rf /usr/include &
+          sudo rm -rf /usr/local/lib/android &
+          sudo rm -rf /usr/local/share/boost &
+          sudo rm -rf /usr/local/lib/node_modules &
+          sudo rm -rf /usr/share/dotnet &
+          sudo rm -rf /opt/ghc &
+          sudo rm -rf /opt/hostedtoolcache/CodeQL &
+          # sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
+          sudo docker image prune --all --force &
+
+          wait
+
+          df -h
+
       - run: "make ${{ matrix.target }}"
         env:
           IMAGE_REGISTRY: "ghcr.io/${{ github.repository }}/workbench-images"
