--- a/.github/workflows/build-notebooks.yaml
+++ b/.github/workflows/build-notebooks.yaml
@@ -27,123 +27,51 @@ jobs:
   # base images
   level0:
     needs: [ "gen" ]
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix: "${{ fromJson(needs.gen.outputs.level0) }}"
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - run: "make ${{ matrix.target }}"
-        env:
-          IMAGE_REGISTRY: "ghcr.io/${{ github.repository }}/workbench-images"
-
+    uses: ./.github/workflows/build-notebooks-TEMPLATE.yaml
+    with:
+      target: "${{ matrix.target }}"
+    secrets: inherit
 
   # images that only depend on base images
   level1:
     needs: [ "gen", "level0" ]
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix: "${{ fromJson(needs.gen.outputs.level1) }}"
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - run: "make ${{ matrix.target }}"
-        env:
-          IMAGE_REGISTRY: "ghcr.io/${{ github.repository }}/workbench-images"
+    uses: ./.github/workflows/build-notebooks-TEMPLATE.yaml
+    with:
+      target: "${{ matrix.target }}"
+    secrets: inherit
 
   level2:
     needs: [ "gen", "level1" ]
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix: "${{ fromJson(needs.gen.outputs.level2) }}"
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - run: "make ${{ matrix.target }}"
-        env:
-          IMAGE_REGISTRY: "ghcr.io/${{ github.repository }}/workbench-images"
+    uses: ./.github/workflows/build-notebooks-TEMPLATE.yaml
+    with:
+      target: "${{ matrix.target }}"
+    secrets: inherit
 
   level3:
     needs: [ "gen", "level2" ]
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix: "${{ fromJson(needs.gen.outputs.level3) }}"
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - run: "make ${{ matrix.target }}"
-        env:
-          IMAGE_REGISTRY: "ghcr.io/${{ github.repository }}/workbench-images"
+    uses: ./.github/workflows/build-notebooks-TEMPLATE.yaml
+    with:
+      target: "${{ matrix.target }}"
+    secrets: inherit
 
   level4:
     needs: [ "gen", "level3" ]
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix: "${{ fromJson(needs.gen.outputs.level4) }}"
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Free up additional disk space
-        # https://docs.github.com/en/actions/learn-github-actions/expressions
-        if: "${{ contains(matrix.target, 'cuda') || contains(matrix.target, 'pytorch') || contains(matrix.target, 'tensorflow') }}"
-        run: |
-          df -h
-
-          sudo rm -rf /usr/include &
-          sudo rm -rf /usr/local/lib/android &
-          sudo rm -rf /usr/local/share/boost &
-          sudo rm -rf /usr/local/lib/node_modules &
-          sudo rm -rf /usr/share/dotnet &
-          sudo rm -rf /opt/ghc &
-          sudo rm -rf /opt/hostedtoolcache/CodeQL &
-          # sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-
-          sudo docker image prune --all --force &
-
-          wait
-
-          df -h
-
-      - run: "make ${{ matrix.target }}"
-        env:
-          IMAGE_REGISTRY: "ghcr.io/${{ github.repository }}/workbench-images"
+    uses: ./.github/workflows/build-notebooks-TEMPLATE.yaml
+    with:
+      target: "${{ matrix.target }}"
+    secrets: inherit
