--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -29,9 +29,10 @@ jobs:
           df -h
 
           sudo rm -rf /usr/include &
-          sudo rm -rf /usr/local/lib/android &
-          sudo rm -rf /usr/local/share/boost &
-          sudo rm -rf /usr/local/lib/node_modules &
+          sudo rm -rf /usr/local &
+          # sudo rm -rf /usr/local/lib/android &
+          # sudo rm -rf /usr/local/share/boost &
+          # sudo rm -rf /usr/local/lib/node_modules &
           sudo rm -rf /usr/share/dotnet &
           sudo rm -rf /opt/ghc &
           sudo rm -rf /opt/hostedtoolcache/CodeQL &
