put in cache, hardcode; will probably fail on podman version

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -48,3 +48,4 @@ jobs:
       - run: "make ${{ inputs.target }}"
         env:
           IMAGE_REGISTRY: "ghcr.io/${{ github.repository }}/workbench-images"
+          CACHE: "ghcr.io/${{ github.repository }}/workbench-images/build-cache"
