--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -28,6 +28,11 @@ jobs:
         run: |
           df -h
 
+          #sudo apt-get -qq purge build-essential 'ghc*'
+          #sudo apt-get clean
+          #sudo apt-get autoremove
+          #sudo apt-get autoclean
+
           sudo rm -rf /usr/include &
           # https://github.com/ros-industrial/industrial_ci/issues/648#issuecomment-805119646
           sudo rm -rf /usr/local &
@@ -44,6 +49,25 @@ jobs:
           wait
 
           df -h
+
+          # tell docker to use the bigger disk
+          #sudo mkdir /mnt/docker
+          #sudo mount --bind /var/lib/docker /mnt/docker
+
+      # https://github.com/containers/buildah/issues/2521#issuecomment-884779112
+      - name: Workaround https://github.com/containers/podman/issues/22152#issuecomment-2027705598
+        run: sudo apt-get remove -y --allow-remove-essential podman crun shim-signed fuse 'libfuse*' fuse-overlayfs
+
+      - uses: actions/cache@v4
+        with:
+          path: /home/linuxbrew/.linuxbrew
+          key: linuxbrew
+
+      - name: Install podman
+        run: |
+          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          /home/linuxbrew/.linuxbrew/bin/brew install podman
+          echo "/home/linuxbrew/.linuxbrew/bin/" >> $GITHUB_PATH
 
       - run: "make ${{ inputs.target }}"
         env:
