free even more space, needed for intel images

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -28,10 +28,15 @@ jobs:
         run: |
           df -h
 
-          #sudo apt-get -qq purge build-essential 'ghc*'
-          #sudo apt-get clean
-          #sudo apt-get autoremove
-          #sudo apt-get autoclean
+          sudo apt-get -qq purge \
+            build-essential \
+            azure-cli google-cloud-sdk google-cloud-cli \
+            microsoft-edge-stable google-chrome-stable firefox \
+            powershell \
+            '~n^temurin' '~n^openjdk' '~n^dotnet' '~n^mono' '~n^aspnetcore' '~n^gfortran' '~n^cpp' '~n^ghc'
+          sudo apt-get clean
+          sudo apt-get autoremove
+          sudo apt-get autoclean
 
           sudo rm -rf /usr/include &
           # https://github.com/ros-industrial/industrial_ci/issues/648#issuecomment-805119646
@@ -42,7 +47,7 @@ jobs:
           sudo rm -rf /usr/share/dotnet &
           sudo rm -rf /opt/ghc &
           sudo rm -rf /opt/hostedtoolcache/CodeQL &
-          # sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
 
           sudo docker image prune --all --force &
 
