--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -89,6 +89,7 @@ jobs:
         run: |
           mkdir -p $HOME/.config/containers/
           cp containers.conf $HOME/.config/containers/containers.conf
+          cp storage.conf $HOME/.config/containers/storage.conf
 
       - name: Add linuxbrew to PATH
         run: echo "/home/linuxbrew/.linuxbrew/bin/" >> $GITHUB_PATH
