--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -90,6 +90,8 @@ jobs:
           mkdir -p $HOME/.config/containers/
           cp containers.conf $HOME/.config/containers/containers.conf
           cp storage.conf $HOME/.config/containers/storage.conf
+          # should at least reset storage when touching storage.conf
+          podman system reset --force
 
       - name: Add linuxbrew to PATH
         run: echo "/home/linuxbrew/.linuxbrew/bin/" >> $GITHUB_PATH
