--- a/containers.conf
+++ b/containers.conf
@@ -1,12 +1,17 @@
 [containers]
 
 [engine]
+# needed for reliability
 retry=42
+# supposedly these images are faster to pull
 compression_format="zstd:chunked"
+# defaults to /var/tmp, which is small
+image_copy_tmp_dir="/home/runner/.local/share/containers/tmp"
 
 [machine]
 
 [network]
+# workaround for missing pasta binary in linuxbrew
 default_rootless_network_cmd="slirp4netns"
 
 [secrets]
