set compression level to 6

--- a/containers.conf
+++ b/containers.conf
@@ -1,3 +1,5 @@
+# https://github.com/containers/common/blob/main/docs/containers.conf.5.md
+
 [containers]
 
 [engine]
@@ -5,6 +7,7 @@
 retry=42
 # supposedly these images are faster to pull
 compression_format="zstd:chunked"
+compression_level="6"
 # defaults to /var/tmp, which is small
 image_copy_tmp_dir="/home/runner/.local/share/containers/tmp"
 
