fixup compression level is int

--- a/containers.conf
+++ b/containers.conf
@@ -7,7 +7,7 @@
 retry=42
 # supposedly these images are faster to pull
 compression_format="zstd:chunked"
-compression_level="6"
+compression_level=6
 # defaults to /var/tmp, which is small
 image_copy_tmp_dir="/home/runner/.local/share/containers/tmp"
 
