Revert "gimme pods"
This reverts commit 89057a999ab3abb1f044603f4a413a82eda195f0.

--- a/.github/workflows/test-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/test-notebooks-TEMPLATE.yaml
@@ -68,12 +68,11 @@ jobs:
           IMAGE_REGISTRY: "ghcr.io/${{ github.repository }}/workbench-images"
 
       - run: |
-          kubectl get statefulset -n default
-          kubectl describe statefulset -n default
+          kubectl get statefulset -A
+          kubectl describe statefulset -A
           sleep 60
-          kubectl get statefulset -n default
-          kubectl describe statefulset -n default
-          kubectl describe pod -n default
+          kubectl get statefulset -A
+          kubectl describe statefulset -A
 
       - run: "make test-${{ inputs.target }}"
         env:
